# touzi-agent

./: .gitignore  README.md  README1.md  dashboard.html  environment.yml  pyproject.toml  view_spec.html
docs/: spec-v2-three-layer.md
docs/superpowers/: ROADMAP.md
docs/superpowers/plans/: 2026-06-18-touzi-agent-implementation.md  2026-06-21-v4-phase1-skeleton.md  2026-06-21-v4-plan1-foundations.md  2026-06-21-v4-plan2-quant-engine.md  2026-06-21-v4-plan3-validation.md
docs/superpowers/specs/: 2026-06-14-stock-research-agent-design.md  2026-06-18-v3-brainstorm-progress.md  2026-06-18-v3-unified-architecture-design copy.md  2026-06-18-v3_1-unified-architecture-design.md  2026-06-18-v3_2-formal-spec.md  2026-06-18-v3_2-unified-architecture-design.md  2026-06-21-v4_0-formal-spec.md  2026-06-21-v4_1-formal-spec.md  v3_2-formal-preview.html  (+5 more)
tests/: conftest.py  test_base_adapter.py  test_config_loader.py  test_costs.py  test_db.py  test_engine.py  test_exits.py  test_expectancy.py  test_ingest.py  test_market_adapters.py  test_metrics.py  test_models.py  test_paper.py  test_portfolio.py  test_risk.py  test_simtrade.py  test_sizing.py  test_smoke.py  test_strategy.py  test_trade.py  test_walkforward.py
touzi_agent/: models.py
touzi_agent/adapters/: base.py  client.py  markets.py
touzi_agent/backtest/: engine.py  exits.py  metrics.py  paper.py  trades.py  walkforward.py
touzi_agent/config/: loader.py
touzi_agent/data/: db.py
touzi_agent/ingestion/: ingest.py
touzi_agent/quant/: costs.py  expectancy.py  portfolio.py  risk.py  sizing.py  strategy.py  trade.py
(+3 files in other folders)
