[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "touzi-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "pyyaml",
    "futu-api",
]

[tool.setuptools.packages.find]
include = ["touzi_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
